fixed spaced gap

--- a/client/templates/yourPics/yourPics.css
+++ b/client/templates/yourPics/yourPics.css
@@ -37,5 +37,6 @@
   -moz-column-count:    2;
   -webkit-column-count: 2;
   column-count:         2;
+  margin-bottom: 100px;
   }
 }
